fix: 修复延迟测试404 + 恢复更新订阅 + 批量延迟测试
延迟测试修复：
- 404根因：URLEncoder把空格编码为+，路径段中+是字面量，节点名不匹配
- 改用java.net.URI构造URL，自动正确编码路径段
- 新增testGroupDelay：用/group/{name}/delay API批量测试策略组所有节点
- 新增fetchAllDelays：从/proxies读取health-check历史延迟
- 延迟测试改为测该账号订阅的全部节点，结果显示在已选节点旁

switchNode修复：
- 同样改用URI构造URL，修复URL编码问题
- 增加错误响应读取，便于排查切换失败原因

UI修复：
- 恢复"更新订阅"按钮到状态行
- "测试延迟"改为"测试全部延迟"，用group delay API批量测试